--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -6,21 +6,20 @@
 <!-- ERROR FLASH MESSAGE END-->
 
 <!-- GUESS USER -->
-<%- user ? "hello" : 
 <section class="lg:relative">
   <div class="mx-auto w-full max-w-7xl pt-16 pb-20 text-center lg:py-48 lg:text-left">
     <div class="px-4 sm:px-8 lg:w-1/2 xl:pr-16">
       <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
         <span class="block xl:inline">Discover Present & Past</span>
-        <span class="block text-indigo-600 xl:inline">GSS Gwarinpa Students</span>
+        <span class="block text-green-600 xl:inline">GSS Gwarinpa Students</span>
       </h1>
       <p class="mx-auto mt-3 max-w-md text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
       <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
         <div class="rounded-md shadow">
-          <a href="/register" class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 md:py-4 md:px-10 md:text-lg">Add your contact</a>
+          <a href="/<%- user ? 'profile/'+user.email : 'register' %>" class="flex w-full items-center justify-center rounded-md border border-transparent bg-green-600 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'register' %></a>
         </div>
         <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-          <a href="/contacts" class="flex w-full items-center justify-center rounded-md border border-transparent bg-white px-8 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View contacts</a>
+          <a href="/contacts" class="flex w-full items-center justify-center rounded-md border border-transparent bg-white px-8 py-3 text-base font-medium text-green-600 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View contacts</a>
         </div>
       </div>
     </div>
