--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -61,7 +61,7 @@
             </a>
           </div>
           <div class="-my-2 -mr-2 md:hidden">
-            <button type="button" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
+            <button type="button" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-green-500" aria-expanded="false">
               <span class="sr-only">Open menu</span>
               <!-- Heroicon name: outline/bars-3 -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -77,12 +77,12 @@
             <% if (user) { %>
             <form action="/logout" method="POST" class="flex flex-wrap">
               <label for="logout">
-                <input id="logout" value="Logout" type="submit" class="cursor-pointer ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700" />
+                <input id="logout" value="Logout" type="submit" class="cursor-pointer ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-green-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700" />
               </label>
             </form>
             <% } else { %>
             <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Sign in</a>
-            <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Register</a>
+            <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-green-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700">Register</a>
             <% } %>
           </div>
         </div>
@@ -107,10 +107,10 @@
               <a href="/about" class="text-base font-medium text-gray-900 hover:text-gray-700">About</a>
             </div>
             <div>
-              <a href="#" class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign up</a>
+              <a href="#" class="flex w-full items-center justify-center rounded-md border border-transparent bg-green-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700">Sign up</a>
               <p class="mt-6 text-center text-base font-medium text-gray-500">
                 Already registered?
-                <a href="#" class="text-indigo-600 hover:text-indigo-500">Sign in</a>
+                <a href="#" class="text-green-600 hover:text-green-500">Sign in</a>
               </p>
             </div>
           </div>
@@ -125,3 +125,6 @@
       <!-- BODY  -->
 
       <!--WATCH OUT FOR AUTO COMPLETE HERE  -->
+    </main>
+  </body>
+</html>
