--- a/view/includes/profile.ejs
+++ b/view/includes/profile.ejs
@@ -8,7 +8,7 @@
     <div class="space-y-2">
       <div class="space-y-1 text-lg font-medium leading-6">
         <h3><%= profile.firstName %> <%= profile.lastName %></h3>
-        <p class="text-indigo-600"><%= profile.year %></p>
+        <p class="text-green-600"><%= profile.year %></p>
       </div>
     </div>
   </a>
