--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -13,13 +13,13 @@
         <span class="block xl:inline">Discover Present & Past</span>
         <span class="block text-green-600 xl:inline">GSS Gwarinpa Students</span>
       </h1>
-      <p class="mx-auto mt-3 max-w-md text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+      <p class="mx-auto mt-3 max-w-md text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">Are you a current or past Junior or Senior Goverment Secondary Gwarinpa, Abuja - F.C.T? Add your contact or view and search the contacts of your school and classmmates. Project by GSS Gwarinpa class of 2006.</p>
       <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
         <div class="rounded-md shadow">
-          <a href="/<%- user ? 'profile/'+user.email : 'register' %>" class="flex w-full items-center justify-center rounded-md border border-transparent bg-green-600 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'register' %></a>
+          <a href="/<%- user ? 'profile/'+user.email : 'register' %>" class="flex w-full items-center justify-center rounded-md border border-transparent bg-green-600 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
         </div>
         <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-          <a href="/contacts" class="flex w-full items-center justify-center rounded-md border border-transparent bg-white px-8 py-3 text-base font-medium text-green-600 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View contacts</a>
+          <a href="/contacts" class="flex w-full items-center justify-center rounded-md border border-transparent bg-white px-8 py-3 text-base font-medium text-green-600 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View Contacts</a>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
     <img class="absolute inset-0 h-full w-full object-cover" src="static/gg.jpeg" alt="" />
   </div>
 </section>
-<section id="anchor-tag" class="mt-12">
+<section class="mt-12">
   <div class="text-center sm:px-6 lg:px-8">
     <div class="space-y-12">
       <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
