--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <div class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition hidden">
+      <div id="mobile-menu-container" class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition hidden md:hidden">
         <div class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5">
           <div class="px-5 pt-5 pb-6">
           <div class="flex items-center justify-between">
