--- a/view/includes/footer.ejs
+++ b/view/includes/footer.ejs
@@ -17,7 +17,7 @@
     <div>
     &copy <%= new Date().getFullYear() %> By <a class="blueOnHover" href="https://dankore.com">Adamu M. Dankore.</a><a class="blueOnHover" href="/privacy"> Privacy Policy.</a>
     <div class="w-full flex justify-center items-center my-2">
-      <img class="rounded-full w-16 h-16" src="../../static/logo.jpg" alt="gss-gwarinpa logo">
+      <img class="rounded-full w-16 h-16" src="../../static/logo.svg" alt="gss-gwarinpa logo">
     </div>
     </div>
     <div>
