--- a/view/includes/loggedInUser.ejs
+++ b/view/includes/loggedInUser.ejs
@@ -5,7 +5,7 @@
       <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
       <circle cx="12" cy="12" r="3"></circle>
     </svg>
-    Edit Profile
+    View Profile
   </a>
   <a href="/contacts/<%= user.username %>/edit" class="text-center flex items-center justify-center px-1 text-md rounded hover:underline my-3 sm:my-3">
     <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3">
